benchmarks/verus/bignum/vericoder_glm_15-09_18h46/debug/bignum_DivMod_Compare_iter3_error.log
=== Verification Error - Iteration 3 ===
File: /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/files/bignum_DivMod_Compare.rs
Time: 2025-09-15 20:21:44

Full Error Output:
--------------------------------------------------------------------------------
Compilation failed: error[E0308]: mismatched types
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_glm_15-09_18h46/bignum_DivMod_Compare_impl.rs:31:26
   |
31 |         2 * power_of_two(k - 1)
   |             ------------ ^^^^^ expected `nat`, found `int`
   |             |
   |             arguments to this function are incorrect
   |
note: function defined here
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_glm_15-09_18h46/bignum_DivMod_Compare_impl.rs:25:9
   |
25 | spec fn power_of_two(k: nat) -> nat
   |         ^^^^^^^^^^^^ ------

error[E0282]: type annotations needed
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_glm_15-09_18h46/bignum_DivMod_Compare_impl.rs:43:33
   |
43 |         (if s.index(0) == '1' { 1 } else { 0 }) 
   |                                 ^ cannot infer type of the type parameter `hint_please_add_suffix_on_literal_like_100u32_or_100int_or_100nat` declared on the function `spec_literal_integer`
   |
help: consider specifying the generic argument
   |
43 |         (if s.index(0) == '1' { 1::<hint_please_add_suffix_on_literal_like_100u32_or_100int_or_100nat> } else { 0 }) 
   |                                  +++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++

error[E0308]: mismatched types
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_glm_15-09_18h46/bignum_DivMod_Compare_impl.rs:53:27
   |
53 |     let mut result: nat = 0;
   |                     ---   ^ expected `nat`, found integer
   |                     |
   |                     expected due to this

error[E0308]: mismatched types
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_glm_15-09_18h46/bignum_DivMod_Compare_impl.rs:56:27
   |
56 |         result = result * 2;
   |                  ------   ^ expected `nat`, found integer
   |                  |
   |                  expected because this is `verus_builtin::nat`

error[E0308]: mismatched types
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_glm_15-09_18h46/bignum_DivMod_Compare_impl.rs:58:31
   |
58 |             result = result + 1;
   |                      ------   ^ expected `nat`, found integer
   |                      |
   |                      expected because this is `verus_builtin::nat`

error[E0308]: mismatched types
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_glm_15-09_18h46/bignum_DivMod_Compare_impl.rs:68:13
   |
68 |     if n == 0 {
   |        -    ^ expected `nat`, found integer
   |        |
   |        expected because this is `verus_builtin::nat`

error[E0308]: mismatched types
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_glm_15-09_18h46/bignum_DivMod_Compare_impl.rs:73:17
   |
73 |     while num > 0
   |           ---   ^ expected `nat`, found integer
   |           |
   |           expected because this is `verus_builtin::nat`

error[E0308]: mismatched types
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_glm_15-09_18h46/bignum_DivMod_Compare_impl.rs:79:18
   |
79 |         if num % 2 == 0 {
   |            ---   ^ expected `nat`, found integer
   |            |
   |            expected because this is `verus_builtin::nat`

error[E0308]: mismatched types
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_glm_15-09_18h46/bignum_DivMod_Compare_impl.rs:79:23
   |
79 |         if num % 2 == 0 {
   |            -------    ^ expected `nat`, found integer
   |            |
   |            expected because this is `verus_builtin::nat`

error[E0308]: mismatched types
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_glm_15-09_18h46/bignum_DivMod_Compare_impl.rs:84:21
   |
84 |         num = num / 2;
   |               ---   ^ expected `nat`, found integer
   |               |
   |               expected because this is `verus_builtin::nat`

error: aborting due to 10 previous errors

Some errors have detailed explanations: E0282, E0308.
For more information about an error, try `rustc --explain E0282`.

--------------------------------------------------------------------------------

Additional Output:
error[E0308]: mismatched types
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_glm_15-09_18h46/bignum_DivMod_Compare_impl.rs:31:26
   |
31 |         2 * power_of_two(k - 1)
   |             ------------ ^^^^^ expected `nat`, found `int`
   |             |
   |             arguments to this function are incorrect
   |
note: function defined here
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_glm_15-09_18h46/bignum_DivMod_Compare_impl.rs:25:9
   |
25 | spec fn power_of_two(k: nat) -> nat
   |         ^^^^^^^^^^^^ ------

error[E0282]: type annotations needed
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_glm_15-09_18h46/bignum_DivMod_Compare_impl.rs:43:33
   |
43 |         (if s.index(0) == '1' { 1 } else { 0 }) 
   |                                 ^ cannot infer type of the type parameter `hint_please_add_suffix_on_literal_like_100u32_or_100int_or_100nat` declared on the function `spec_literal_integer`
   |
help: consider specifying the generic argument
   |
43 |         (if s.index(0) == '1' { 1::<hint_please_add_suffix_on_literal_like_100u32_or_100int_or_100nat> } else { 0 }) 
   |                                  +++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++

error[E0308]: mismatched types
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_glm_15-09_18h46/bignum_DivMod_Compare_impl.rs:53:27
   |
53 |     let mut result: nat = 0;
   |                     ---   ^ expected `nat`, found integer
   |                     |
   |                     expected due to this

error[E0308]: mismatched types
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_glm_15-09_18h46/bignum_DivMod_Compare_impl.rs:56:27
   |
56 |         result = result * 2;
   |                  ------   ^ expected `nat`, found integer
   |                  |
   |                  expected because this is `verus_builtin::nat`

error[E0308]: mismatched types
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_glm_15-09_18h46/bignum_DivMod_Compare_impl.rs:58:31
   |
58 |             result = result + 1;
   |                      ------   ^ expected `nat`, found integer
   |                      |
   |                      expected because this is `verus_builtin::nat`

error[E0308]: mismatched types
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_glm_15-09_18h46/bignum_DivMod_Compare_impl.rs:68:13
   |
68 |     if n == 0 {
   |        -    ^ expected `nat`, found integer
   |        |
   |        expected because this is `verus_builtin::nat`

error[E0308]: mismatched types
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_glm_15-09_18h46/bignum_DivMod_Compare_impl.rs:73:17
   |
73 |     while num > 0
   |           ---   ^ expected `nat`, found integer
   |           |
   |           expected because this is `verus_builtin::nat`

error[E0308]: mismatched types
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_glm_15-09_18h46/bignum_DivMod_Compare_impl.rs:79:18
   |
79 |         if num % 2 == 0 {
   |            ---   ^ expected `nat`, found integer
   |            |
   |            expected because this is `verus_builtin::nat`

error[E0308]: mismatched types
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_glm_15-09_18h46/bignum_DivMod_Compare_impl.rs:79:23
   |
79 |         if num % 2 == 0 {
   |            -------    ^ expected `nat`, found integer
   |            |
   |            expected because this is `verus_builtin::nat`

error[E0308]: mismatched types
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_glm_15-09_18h46/bignum_DivMod_Compare_impl.rs:84:21
   |
84 |         num = num / 2;
   |               ---   ^ expected `nat`, found integer
   |               |
   |               expected because this is `verus_builtin::nat`

error: aborting due to 10 previous errors

Some errors have detailed explanations: E0282, E0308.
For more information about an error, try `rustc --explain E0282`.
